# libmypaint

./: CMakeLists.txt
